--- a/package.json
+++ b/package.json
@@ -20,14 +20,20 @@
     "@trpc/next": "next",
     "@trpc/react-query": "next",
     "@trpc/server": "next",
+    "@types/jsonwebtoken": "^9.0.6",
+    "bcryptjs": "^2.4.3",
+    "cookies-next": "^4.2.1",
+    "jsonwebtoken": "^9.0.2",
     "next": "^14.1.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-loader-spinner": "^6.1.6",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/eslint": "^8.56.2",
     "@types/node": "^20.11.20",
     "@types/react": "^18.2.57",
